[tool.poetry]
name = "consume-metaweather"
version = "0.1.0"
description = "Client to check if ti's raining in a city using metaweather API"
authors = ["Sebastien Billion <sebastien.billion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
inquirer = "^2.6.3"
click = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
